<resources>
    <string name="app_name">PC-Phone</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_preferences">Preferences</string>
    <string name="title_apps">Apps</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="title_activity_shortcut">ShortcutActivity</string>
    <string name="title_activity_share">ShareActivity</string>

    <!-- 通知 -->
    <string name="no_enable_dialog_title">未开启通知权限</string>
    <string name="no_enable_dialog_msg">请先开启应用的通知权限，以便执行后台任务</string>
    <string name="no_enable_dialog_bn_ok">去开启</string>
    <string name="no_enable_dialog_bn_cancel">取消</string>
    <string name="no_channel_id_bg_task">no_channel_id_bg_task</string>
    <string name="no_channel_name_bg_task">后台任务的前台通知</string>
    <string name="no_bg_task_content_default">开始执行…</string>

    <string name="tip_data_null">数据为空</string>
    <string name="tip_pc_addr_null">选项中的 PC 局域网 IP 或端口为空</string>
    <string name="tip_pc_mac_null">选项中的 PC MAC 地址为空</string>

    <!-- 快捷方式 -->
    <string name="shortcut_id_wakeup_pc">shortcut_wakeup_pc</string>
    <string name="shortcut_id_shutdown_pc">shortcut_shutdown_pc</string>
    <string name="shortcut_id_clipboard_clear">shortcut_clipboard_clear</string>
    <string name="shortcut_id_clipboard_send">shortcut_clipboard_send</string>
    <string name="shortcut_id_clipboard_load_text">shortcut_clipboard_load_text</string>
    <string name="shortcut_id_clipboard_load_file">shortcut_clipboard_load_file</string>
    <string name="shortcut_id_media_timed_pause">shortcut_media_timed_pause</string>

    <string name="shortcut_label_unknown_task">未知的操作</string>
    <string name="shortcut_label_wakeup_pc_short">唤醒PC</string>
    <string name="shortcut_label_shutdown_pc_short">关闭PC</string>
    <string name="shortcut_label_clipboard_clear_short">清空剪贴板</string>
    <string name="shortcut_label_clipboard_send_short">发送剪贴板到PC</string>
    <string name="shortcut_label_clipboard_load_text_short">获取PC剪贴板文本</string>
    <string name="shortcut_label_clipboard_load_file_short">获取PC剪贴板文件</string>
    <string name="shortcut_label_media_timed_pause_short">定时暂停播放</string>

    <string name="shortcut_tip_do_task_err">执行"%s"出错</string>
    <string name="shortcut_tip_wakeup_pc_success">已发送唤醒包到 PC</string>
    <string name="shortcut_tip_clipboard_clear_success">已清空剪贴板</string>
    <string name="shortcut_tip_clipbroad_send_data_null">剪贴板中没有数据，或无法访问（当应用不在前台时）</string>
    <string name="shortcut_tip_clipbroad_send_read_text_fail">读取剪贴板中的文本失败</string>

    <string name="bn_ok">确定</string>
    <string name="bn_cancel">取消</string>

    <!-- 分享 -->
    <string name="share_activity_title">分享到…</string>
    <string name="share_activity_label_send_pc">PC</string>
    <string name="share_activity_label_tg_fh">TG 番号</string>

    <string name="share_action_pc_send_text">ACTION_PC_SEND_TEXT</string>
    <string name="share_action_pc_send_files">ACTION_PC_SEND_FILES</string>

    <string name="label_pc_send_files">发送文件到 PC</string>
    <string name="label_pc_send_text">发送文本到 PC</string>

    <!-- 应用 -->
    <string name="apps_backup_bn_title">备份应用信息</string>
    <string name="apps_download_sw_google_label">Google Play</string>
    <string name="apps_preinstall_sw_label">显示预装</string>
    <string name="apps_entity_icon_label">应用图标</string>

    <!-- 选项 -->
    <string name="prefs_action_backup">ACTION_PREFS_BACKUP</string>
    <string name="prefs_action_restore">ACTION_PREFS_RESTORE</string>

</resources>